Update product name from "CineViewer.js" to "CineViewer JS"
Replace dot notation with space in the Japanese product description
for better readability and consistency with branding.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <a href="https://docs.google.com/document/d/15xXQPpMZY3nyn1pSox5meNvcxAUrkhTuqb-DUUvdU7g/edit?usp=sharing">README (Google Document)</a>
     </p>
     <p>
-        CineViewer.jsは、スマートフォン等で簡易的に映画フィルムを見るためのツールです。
+        CineViewer JSは、スマートフォン等で簡易的に映画フィルムを見るためのツールです。
         ウェブアプリケーションと、安価に制作できる接写装置とで構成されています。
     </p>
 </div>
