Add GitHub repository link to project description
Include link to https://github.com/kzbb/cvjs in the README section
for easy access to the source code.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         CineViewer JSは、スマートフォン等で簡易的に映画フィルムを見るためのツールです。
         ウェブアプリケーションと、安価に制作できる接写装置とで構成されています。
     </p>
+    <a href="https://github.com/kzbb/cvjs">GitHub Repository</a>
 </div>
 <!--ここまでREADME-->
 
