--- a/index.html
+++ b/index.html
@@ -69,6 +69,18 @@
                 </div>
             </div>
             <div class="mb-3">
+                <button id="recordBtn" type="button" class="btn btn-danger">Rec</button>
+                <button id="stopRecordBtn" type="button" class="btn btn-secondary" disabled>Stop</button>
+                <div class="mt-2">
+                    <small id="recordingStatus" class="text-muted"></small>
+                </div>
+                <div class="mt-2">
+                    <select id="recordFormatSelect" class="form-select form-select-sm">
+                        <option value="">RecFormat (Auto)</option>
+                    </select>
+                </div>
+            </div>
+            <div class="mb-3">
                 <select id="cameraSelect" class="form-select form-select-lg mb-3"></select>
             </div>
         </div>
