--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="small text-secondary mt-2" id="recFormat"></div>
                 <div class="mt-2 d-flex gap-2 align-items-center flex-wrap">
-            <a id="recDownload" class="btn btn-outline-secondary btn-sm d-none" download>Download</a>
+            <a id="recDownload" class="btn btn-outline-secondary btn-sm d-none" download title="Download file">Save video</a>
                     <span id="recNote" class="text-warning-emphasis small"></span>
                 </div>
                 <video id="recPreview" class="w-100 mt-2 d-none" controls></video>
